# emerging-exceptions

./: .gitignore  .pre-commit-config.yaml  DEV-README.md  Dockerfile  README.md  dev-requirements.txt  docker-compose.yml  pyproject.toml
.github/workflows/: lint.yaml  test.yaml
src/: demonstration.py  setup.py
src/EE/: __init__.py  loader.py  template.py  utils.py
src/EE/Stego/: __init__.py  main.py  manifest.json
src/EE/fourier/: How_To_Use.md  Image_Watermarking_README.md  __init__.py  fourier_transform_decoder.py  main.py  watermark_decoder.py  watermark_encoder.py
src/EE/fourier/watermarking_for_copyright/: main.py
src/EE/pixelQR/: ImageDecoding.py  ImageEncoding.py  __init__.py  main.py  manifest.json
src/EE/ui/: __init__.py  components.py
src/OpenCV Image Handling/: ImageDecoding.py  ImageEncoding.py  ImageRotationTest.py  Opencv image handling.py  del stuff.py  experimental base conversion.py  t.txt
src/backend/: HideMessageAsBinaryInPNG.py  main.py
src/frontend/: app.html  app.js  index.html  style.css
src/frontend/components/: dropdown.html  select.html  style.html  text_large.html  text_small.html
tests/: test_example.py
